@@ -1,2 +1,2 @@
 #!/bin/bash
-./gradlew run
+JAVA_OPTS="--enable-native-access=ALL-UNNAMED" ./gradlew run
